--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a href="#" class="navbar-brand">Dating App</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+    <a href="#" class="navbar-brand">Dating App</a>
 
    
-    <ul class="navbar-nav mr-auto">
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a href="#" class="nav-link">Matches</a>
       </li>
@@ -12,20 +13,20 @@
       <li class="nav-item">
         <a href="#" class="nav-link">Messages</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
           <a href="#" class="nav-link" (click)="logout()">Logout</a>
-        </li>
+        </li> -->
     </ul>
 
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Welcome User
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome {{authService.decodedToken.unique_name | titlecase}}
       </a>
 
-      <div class="dropdown-menu">
+      <div class="dropdown-menu mt-3" *dropdownMenu>
         <a href="#" class="dropdown-item"><i class="fa fa-user"></i>Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item"><i class="fa fa-sign-out"></i>Logout</a>
+        <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i>Logout</a>
       </div>
     </div>
     
@@ -36,6 +37,7 @@
         placeholder="Password" required style="margin-left: 5px;" [(ngModel)]="model.password">
       <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit" style="margin-left: 5px;">Login</button>
     </form>
-  
+  </div>
+   
 </nav>
 
