--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a href="#" class="navbar-brand">Dating App</a>
+    <a class="navbar-brand" [routerLink]="['/home']" >Dating App</a>
 
    
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a href="#" class="nav-link">Matches</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/members']" >Matches</a>
       </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link">Lists</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/lists']" >Lists</a>
       </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link">Messages</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/messages']" >Messages</a>
       </li>
       <!-- <li class="nav-item">
           <a href="#" class="nav-link" (click)="logout()">Logout</a>
